--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_switch: ^0.3.2
   nil: ^1.1.1
   flutter_slidable: ^2.0.0
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
